# std_detector_buffer

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  googletest.in  requirements.txt  setup.py
core-buffer/: CMakeLists.txt
core-buffer/include/: BufferUtils.hpp  RamBuffer.hpp  buffer_config.hpp  buffer_utils.hpp  formats.hpp  gigafrost.hpp
core-buffer/include/core_buffer/: receiver.hpp  send_receive_config.hpp
core-buffer/src/: BufferUtils.cpp  RamBuffer.cpp  buffer_utils.cpp  ram_buffer.cpp  receiver.cpp  sender.cpp
core-buffer/test/: CMakeLists.txt  main.cpp  test_RamBuffer.cpp  test_bitshuffle.cpp  test_ram_buffer.cpp
detectors/: CMakeLists.txt  README.md  detector.hpp  eiger.hpp  gigafrost.hpp  jungfrau.hpp  jungfraujoch.hpp
detectors/test/: CMakeLists.txt  main.cpp  test_gigafrost.cpp  test_jungfrau.cpp
protos/: CMakeLists.txt  image_metadata.proto  start_stop_writer.proto  writer_driver.proto
source/: CMakeLists.txt
source/core-buffer/: CMakeLists.txt
source/core-buffer/include/: buffer_config.hpp  buffer_utils.hpp  formats.hpp  ram_buffer.hpp
source/core-buffer/src/: buffer_utils.cpp  communicator.cpp  ram_buffer.cpp  receiver.cpp  sender.cpp
source/core-buffer/test/: CMakeLists.txt  test_bitshuffle.cpp  test_ram_buffer.cpp
source/detectors/: CMakeLists.txt  README.md  common.hpp  eiger.hpp  gigafrost.hpp  jungfrau.hpp
source/interface/: CMakeLists.txt
source/interface/std_buffer/: buffered_metadata.proto  image_buffer.proto  image_metadata.proto  rdma.proto  writer_action.proto  writer_command.proto
source/interface/std_daq/: buffered_metadata.proto  writer_command.proto
source/shm-holder/: CMakeLists.txt
source/shm-holder/src/: main.cpp
source/std-array10-recv/: CMakeLists.txt
source/std-array10-recv/src/: receiver.cpp
source/std-bsread-recv/: CMakeLists.txt
source/std-bsread-recv/src/: bsread_recv_stats_collector.hpp  receiver.cpp
source/std-bsread-stream/: CMakeLists.txt
source/std-bsread-stream/src/: stream.cpp
source/std-buffer/: CMakeLists.txt
source/std-buffer-driver/: CMakeLists.txt
source/std-buffer-driver/src/: main.cpp  reader_state.hpp  replay_settings.hpp  replayer.cpp  replayer.hpp  socket_session.cpp  state_manager.hpp
source/std-buffer-writer/: CMakeLists.txt
source/std-buffer-writer/src/: buffer_writer.cpp  buffer_writer.hpp  redis_sender.cpp  redis_sender.hpp  writer.cpp
source/std-buffer/std-buffer-common/: CMakeLists.txt
source/std-buffer/std-buffer-reader/: CMakeLists.txt
source/std-buffer/std-buffer-reader2/: CMakeLists.txt
source/std-buffer/std-buffer-writer/: CMakeLists.txt
source/std-chunk-sender/: CMakeLists.txt
source/std-chunk-sender/src/: main.cpp
source/std-data-assembler/: CMakeLists.txt
source/std-data-assembler/include/: assembler.hpp
source/std-data-assembler/src/: assembler.cpp  main.cpp
source/std-data-assembler/test/: CMakeLists.txt  test_assembler.cpp
source/std-data-chunk/: CMakeLists.txt
source/std-data-chunk/src/: main.cpp
source/std-data-chunk/std-data-chunk-common/: CMakeLists.txt
source/std-data-chunk/std-data-chunk-receiver/: CMakeLists.txt
source/std-data-chunk/std-data-chunk-sender/: CMakeLists.txt
source/std-data-chunker/: CMakeLists.txt
source/std-data-chunker/src/: main.cpp
source/std-data-chunker/std-data-chunker-common/: CMakeLists.txt
source/std-data-compress/: CMakeLists.txt
source/std-data-compress/blosc2/: CMakeLists.txt
source/std-data-compress/h5bitshuffle-lz4/: CMakeLists.txt
source/std-data-compress/src/: compress.cpp  compression_stats_collector.hpp
source/std-data-convert/: CMakeLists.txt  README.md
source/std-data-convert-eg/: CMakeLists.txt
source/std-data-convert-eg/include/: converter.hpp  stats_collector.hpp
source/std-data-convert-eg/src/: converter.cpp  main.cpp  stats_collector.cpp
source/std-data-convert-gf/: CMakeLists.txt
source/std-data-convert-gf/include/: converter.hpp  (+1 more)
source/std-data-convert-jf/: CMakeLists.txt  README.md
source/std-data-converter-gf/: CMakeLists.txt
source/std-data-sync/: CMakeLists.txt  image_metadata.proto
source/std-delay-filter/: CMakeLists.txt
source/std-det-driver/: CMakeLists.txt
source/std-det-driver2/: CMakeLists.txt
source/std-det-meta-writer/: CMakeLists.txt
source/std-det-writer/: CMakeLists.txt
source/std-det-writer2/: CMakeLists.txt
source/std-gf-filter/: CMakeLists.txt
source/std-live-stream/: CMakeLists.txt
source/std-metadata-stream/: CMakeLists.txt
source/std-stream-receive/: CMakeLists.txt
source/std-stream-receive-eg/: CMakeLists.txt
source/std-stream-receive-gf/: CMakeLists.txt
source/std-stream-send/: CMakeLists.txt
source/std-stream-send-gf/: CMakeLists.txt
source/std-stream-send-jf/: CMakeLists.txt
source/std-udp-recv/: CMakeLists.txt  README.md
source/std-udp-sync/: CMakeLists.txt
source/std-udp-tools/: CMakeLists.txt
source/utils/: CMakeLists.txt
std-det-writer/: CMakeLists.txt
std-det-writer/include/: DetWriterConfig.hpp  JFH5Writer.hpp  WriterStats.hpp  live_writer_config.hpp
std-det-writer/src/: JFH5Writer.cpp  WriterStats.cpp  main.cpp
std-stream-send/: CMakeLists.txt
std-stream-send/include/: ZmqLiveSender.hpp  stream_config.hpp
std-stream-send/src/: ZmqLiveSender.cpp  main.cpp
std-udp-recv/: CMakeLists.txt
std-udp-recv/include/: FrameStats.hpp  FrameUdpReceiver.hpp  PacketUdpReceiver.hpp  UdpRecvConfig.hpp  packet_udp_receiver.hpp  udp_recv_config.hpp  zmq_sender.h
std-udp-recv/src/: FrameStats.cpp  FrameUdpReceiver.cpp  PacketUdpReceiver.cpp  frame_stat.cpp  main.cpp  main_eiger.cpp  packet_udp_receiver.cpp  zmq_sender.cpp
std-udp-recv/test/: CMakeLists.txt  main.cpp  simulator.cpp  simulator_jf.cpp  test_FrameUdpReceiver.cpp  test_PacketUdpReceiver.cpp  test_packet_udp_receiver.cpp
std-udp-sync/: CMakeLists.txt
std-udp-sync/include/: SyncStats.hpp  UdpSyncConfig.hpp  ZmqPulseSyncReceiver.hpp  sync_config.hpp
std-udp-sync/src/: SyncStats.cpp  ZmqPulseSyncReceiver.cpp  main.cpp
(+510 files in other folders)
