cmake_minimum_required(VERSION 3.12)

add_subdirectory(external)

add_subdirectory("core-buffer")
add_subdirectory("detectors")
add_subdirectory("interface")
add_subdirectory("std-bsread-recv")
add_subdirectory("std-buffer")
add_subdirectory("std-data-compress")
add_subdirectory("std-data-convert")
add_subdirectory("std-det-driver")
add_subdirectory("std-det-writer3")
add_subdirectory("std-live-stream")
add_subdirectory("std-metadata-stream")
add_subdirectory("std-stream-receive")
add_subdirectory("std-stream-send")
add_subdirectory("std-udp-recv")
add_subdirectory("std-data-sync")
add_subdirectory("std-udp-tools")
add_subdirectory("utils")
